<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="240dp"
        android:layout_height="240dp" />

    <EditText
        android:id="@+id/url_of_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Введите URL" />

    <Button
        android:id="@+id/load_image_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="Загрузить и сохранить" />

    <Button
        android:id="@+id/only_load_image_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="Показать изображение" />

    <Button
        android:id="@+id/clear_all_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="Очистить" />

</LinearLayout>